    packages based on snapshots.
  * Thanks to أحمد المحمودي (Ahmed El-Mahmoudy) for the push
    to create experimental packages and the patches at #408610.

 -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Sun, 03 Feb 2008 08:17:52 +0530

elinks (0.11.3-4) unstable; urgency=low

  * Update 02_setup-bugs-FSSTND.diff to prevent changing contrib/elinks.conf
    (it is not used anymore).

 -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Sun, 27 Jan 2008 21:49:04 +0530

elinks (0.11.3-3) unstable; urgency=low

  * Remove 06_elinks.conf-parse-error.diff and use a minimal elinks.conf file
    with only the user_agent setting.  Thanks giggz <giggzounet@gmail.com> for
    the bug report and Kalle Olavi Niemitalo for suggestion (Closes: #460912)
  * Rename patch 01_asciidoc-escape-FTBFS as 01_asciidoc7compatible to add a
    "-a asciidoc7compatible" to ASCIIDOC_FLAGS.  Thanks Kalle Olavi Niemitalo
    <kon@iki.fi> for the suggestion.
  * debian/copyright: Add 2008 to Debian packaging Copyright 'years'.
  * debian/control: Remove superfluous ;a=summary suffix from gitweb URL in
    Vcs-Browser:
  * Really install elinks.desktop desktop file for elinks and elinks-lite
    (remove elinks-lite.desktop, it is identical to elinks.desktop).
  * Changed all patches from "diff -urNad" to "git diff".  This will make it
    easier to maintain the patches.  Just modify the code in place and do a
    "git diff > debian/patches/0X_foo.diff"
  * Pass --enable-leds to configure.  Set ui.leds.enable to 0 by default via
    06_459467_ui.leds.enable_0.diff, this solves #459467 better.  Thanks to
    أحمد المحمودي (Ahmed El-Mahmoudy) for the suggestion.

 -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Thu, 24 Jan 2008 17:38:29 +0530

elinks (0.11.3-2) unstable; urgency=low

  * Change Moritz's email ID in Uploaders to jmm@debian.org to be in sync with
    his other packages
  * Correction: Change Vcs-Svn in debian/control to Vcs-Git and VCS-Browser to
    the gitweb URL