@@ -1,0 +1,1 @@
+debian/elinks.desktop usr/share/applications
