@@ -1,0 +1,3 @@
+debian/elinks.desktop usr/share/applications
+debian/overrides/lintian/elinks usr/share/lintian/overrides
+debian/overrides/linda/elinks usr/share/linda/overrides
