@@ -31,8 +31,12 @@ elinks (0.11.3-4) unstable; urgency=low
 
   * Update 02_setup-bugs-FSSTND.diff to prevent changing contrib/elinks.conf
     (it is not used anymore).
+  * Use dh_install for installing lintian/linda overrides and desktop file.
+    This is cleaner than doing it in debian/rules via the 'install' program.
+  * Add libidn11-dev do Build-Depends, IDN isn't enabled otherwise even if it
+    not disabled by default
 
- -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Sun, 27 Jan 2008 21:49:04 +0530
+ -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Sat, 09 Feb 2008 11:25:17 +0530
 
 elinks (0.11.3-3) unstable; urgency=low
 
